# omegalul-ng

./: Cargo.toml  README.md
omegalul/: Cargo.toml
omegalul/src/: client.rs  lib.rs  randid.rs
omegalul/src/api/: responses.rs
