[package]
name = "omegalul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
